projects/compiler/test/typechecker/tuple/error_type_mismatch.1.out
Error at %FILE_NAME%:1:25
Type mismatch
  |  val t: (Int, String) = (1.2, "three")
                             ^
Expected: Int
but instead found: Float
